<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rnb.shedule5.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="withText|ifRoom"
        android:title="@string/add"/>
    <item
        android:id="@+id/action_menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_menu_share"/>
    <item
        android:id="@+id/action_menu_import"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="100"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_menu_import"/>
</menu>